<resources>
    <string name="app_name">Forex Vip Signals</string>
    <string name="about">More Apps</string>
    <string name="action">Action</string>
    <string name="active">Active</string>
    <string name="airplane">Airplane mode</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="airplane_on">You have turned on the airplane mode.</string>
    <string name="alert_placeholder_message">This is a message to be displayed on the alert.</string>
    <string name="alert_placeholder_title">Title</string>
    <string name="all_premium_plans">All Premium Plans</string>
    <string name="analysis">Analysis</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="buy">BUY</string>
    <string name="change_language">Change Language</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_language">Choose Language</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="comment">Comment</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_airplane_mode_message">You have turned on the airplane mode.</string>
    <string name="default_airplane_mode_snackbar_message">You have turned on the airplane mode!</string>
    <string name="default_message">Check your Internet connection and try again.</string>
    <string name="default_snackbar_message">No active Internet connection!</string>
    <string name="default_title">No Internet</string>
    <string name="default_web_client_id">843314339703-v3ja4dt350554s5db6a6t3ufrt4pgikk.apps.googleusercontent.com</string>
    <string name="desc_premium">If you choose to purchase a subscription, payment will be charged to your Google account, and your account will be charged for renewal within 24 hours before the end of the current period.\10\10Auto-renewal may be turned off at any time by going to your settings in the Play Store after purchase. If you don\'t choose to purchase a subscription, you can simply continue using the App for free.\10\10For more information. Please visit our Terms of Use and Privacy Policy</string>
    <string name="description">DESCRIPTION</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://singal-apps.firebaseio.com</string>
    <string name="gcm_defaultSenderId">843314339703</string>
    <string name="go_premium">Go Premium</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="if_you_have_a_previous">If you have a previous subscription, click the restore button to activate it.</string>
    <string name="item_view_role_description">Tab</string>
    <string name="last_update_time">Last update time</string>
    <string name="library_name">Oops! No Internet!</string>
    <string name="mobile">Mobile data</string>
    <string name="mobile_data">Mobile data</string>
    <string name="month">month</string>
    <string name="monthly">Monthly</string>
    <string name="msg_token_fmt">token data: %s</string>
    <string name="new_signal">New Signal</string>
    <string name="no_ads">No Ads</string>
    <string name="no_desc">no_desc</string>
    <string name="no_internet_body">You are not connected to the Internet</string>
    <string name="no_internet_title">No Internet</string>
    <string name="ok">OK</string>
    <string name="open_price">Open Price</string>
    <string name="opening_time">Opening Time</string>
    <string name="packages">Packages</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link">https://sites.google.com/view/photoeffecttech/privacy-policy</string>
    <string name="profit_loss">Profit/Loss</string>
    <string name="project_id">singal-apps</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="remind_later">Remind Later</string>
    <string name="risk_disclaimer">Risk Disclaimer</string>
    <string name="detail1">TRADING IS NOT SUITABLE FOR EVERYONE.\n\nIF YOU DON’T KNOW WHAT YOU’RE DOING, TRADING FOREX AND CRYPTO CAN CAUSE YOU TO COMPLETELY LOSE ALL OF YOUR MONEY.</string>
    <string name="detail2">\nFOREX AND CRYPTO TRADING IS HIGHLY SPECULATIVE AND RISKY.\n\nIT IS ONLY SUITABLE FOR THOSE PEOPLE WHO UNDERSTAND, AND ARE WILLING TO TAKE ON, THE FINANCIAL AND OTHER RISKS INVOLVED, AND WHO HAVE THE RESOURCES TO WITHSTAND LOSSES THAT MAY BE SIGNIFICANTLY GREATER THAT ANY DEPOSITS YOU HAVE MADE.</string>
    <string name="detail3">\nFinancial instruments that are traded on leverage carry a high level of risk and you could lose more than your deposits.\n\nTrading on a leveraged basis means a small market movement will have a proportionally larger impact on your position and could result in a total loss of your deposit(s).\n\nThe high leverage associated with trading foreign currency can result in significant losses due to price changes, especially during periods of volatility in the underlying market.\n\nPlease ensure you fully understand the risks and carefully consider your financial situation and trading experience before trading.\n\nTrading forex or cryptocurrencies on margin carries a HIGH LEVEL OF RISK, and may not be suitable for all investors. Before participating in the FX and crypto markets, you should carefully consider your investment objectives, level of experience, and risk appetite.\n\nYou should trade in foreign currency contracts or cryptocurrencies only if you understand the contracts (and contractual relationships) into which you are entering and the extent of your exposure to risk.\n\nThe possibility exists that you could sustain a loss of some or all of your initial investment and therefore you should not invest money that you cannot afford to lose!\n\nThe high degree of leverage associated with trading currencies means that the degree of risk compared to other financial products is higher.\n\nThe leveraged nature of forex and crypto trading  means that any market movement will have an equally proportional effect on your deposited funds.\n\nLeverage (or margin trading) may work against you resulting in substantial loss. And a feeling a sensation similar to getting sucker-punched in the stomach. And then in the face. And then in the throat.\n\nThere is considerable exposure to risk in any off-exchange foreign exchange transaction, including, but not limited to, leverage, creditworthiness, limited regulatory protection, and market volatility that may substantially affect the price or liquidity of a currency or currency pair.\n\nYou should be aware of all the risks associated with forex and crypto trading\n\nSeek advice from an independent financial advisor if you have any doubts.</string>
    <string name="detail4">\nMarket Opinions</string>
    <string name="detail5">\nThe content is for informational and educational purposes only.\n\nNo information presented constitutes a recommendation to buy, sell, or hold any security, financial product, cryptocurrency or instrument to engage in any specific investment strategy.\n\nForex, options, futures, spread betting, cryptocurrencies, and CFDs (or derivatives of any the aforementioned) are complex instruments and come with a high risk of losing money rapidly due to leverage and market volatility.\n\nYou should consider whether you understand how derivatives like spread bets, rolling spot FX contracts, perpetual swaps, and CFDs work, and whether you can afford to take the high risk of losing your money.\n\nAny opinions, news, research, analyses, prices, or other information contained on this App is provided as general market commentary and does NOT constitute investment advice.</string>
    <string name="detail6">\nThis app will not accept liability for any loss or damage, including without limitation to, any loss of profit, which may arise directly or indirectly from use of or reliance on such information.</string>
    <string name="detail7">\nYOU are fully responsible for any investment decisions you make. Such decisions should be based solely on your evaluation of your financial circumstances, investment objectives, risk tolerance, and liquidity needs.\n\nYou should NOT rely solely upon the information or opinions that you read on the App. Rather, you should use what you read as a starting point for doing your own independent research, your own independent analysis, and refine your own trading methods before placing your money at risk.</string>
    <string name="detail8">\nInternet Trading Risks</string>
    <string name="detail9">\nThere are risks associated with utilizing an Internet-based deal execution trading system including, but not limited to, the failure of hardware, software, and Internet connection. its reception or routing via the internet, the configuration of your equipment or the reliability of its connection, we cannot be responsible for communication failures, distortions or delays when trading via the Internet.</string>
    <string name="detail10">\nAccuracy of Information</string>
    <string name="detail11">\nThe content on this App is subject to change at any time without notice and is provided for the sole purpose of assisting traders to make independent investment decisions.\n\nThis app has taken reasonable measures to ensure the accuracy of the information on the App.\n\nHowever, App does not guarantee its accuracy, and will not accept liability for any loss or damage that may arise directly or indirectly from the content or your inability to access the website, for any delay in or failure of the transmission or the receipt of any instruction or notifications sent through this website.\n\nThe content on this website is subject to change at any time without notice.\n</string>
    <string name="detail12">\nDistribution</string>
    <string name="detail13">\nThis App is not intended for distribution, or use by, any person in any country where such distribution or use would be contrary to local law or regulation.\n\nNone of the services or investments referred to on this App are available to persons residing in any country where the provision of such services or investments would be contrary to local law or regulation.\n\nIt is the responsibility of visitors to this website to ascertain the terms of and comply with any local law or regulation to which they are subject.</string>
</resources>