<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RiskActivity">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/image_back"
            android:fontFamily="@font/bold"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="Risk Disclosure"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_7sdp"
        android:background="@color/shadow_2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="Risk Disclosure"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/detail1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:text="@string/detail2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/detail3"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/detail4"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/detail5"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/detail6"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/detail7"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/detail8"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/detail9"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/detail10"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/detail11"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/detail12"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/detail13"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_widget_selection_recycler_view"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" />
    </LinearLayout>
</LinearLayout>